#=========================================================
#      ____
#     ╱   ╱╲    Plywood C++ Base Library
#    ╱___╱╭╮╲   https://plywood.dev/
#     └──┴┴┴┘
#=========================================================

cmake_minimum_required(VERSION 3.10)
set(CMAKE_CONFIGURATION_TYPES "Debug;Release;Final" CACHE INTERNAL "Build configs")
project(json-tests)
include(../../src/common.cmake)

# plywood
add_source_files(PLYWOOD_SOURCES "${CMAKE_CURRENT_LIST_DIR}/../../src" dlmalloc.c ply-json.* ply-base.*)
if(WIN32)
    add_source_files(PLYWOOD_SOURCES "${CMAKE_CURRENT_LIST_DIR}/../../src" *.natvis)
endif()
add_library(plywood ${PLYWOOD_SOURCES})
target_include_directories(plywood PUBLIC "${CMAKE_CURRENT_LIST_DIR}/../../src")

# json-tests
add_source_files(JSON_TEST_SOURCES "${CMAKE_CURRENT_LIST_DIR}" json-tests.cpp)
add_executable(json-tests ${JSON_TEST_SOURCES})
target_link_libraries(json-tests PRIVATE plywood)
target_compile_definitions(json-tests PRIVATE JSON_TESTS_PATH="${CMAKE_CURRENT_LIST_DIR}")
